[tool.poetry]
name = "genoscope"
version = "0.1.0"
description = ""
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
jax = "^0.4.37"
optax = "^0.2.4"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"
jupyterlab = "^4.3.3"
biopython = "^1.84"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
